--- a/BugReporter.Models/BugReporter.Models.csproj
+++ b/BugReporter.Models/BugReporter.Models.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Models\ReportModel.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserInfo.cs" />
+    <Compile Include="Models\UserList.cs" />
+    <Compile Include="Networking\Request\UserListRequest.cs" />
     <Compile Include="Networking\Request\LoginRequest.cs" />
     <Compile Include="Networking\Request\LogoutRequest.cs" />
     <Compile Include="Networking\Request\SaveReportRequest.cs" />
@@ -61,12 +63,16 @@
     <Compile Include="Networking\Response\Response.cs" />
     <Compile Include="Networking\Response\SaveReportResponse.cs" />
     <Compile Include="Networking\Response\UpdateResponse.cs" />
+    <Compile Include="Networking\Response\UserListResponse.cs" />
     <Compile Include="Utils\ProjectConverter.cs" />
     <Compile Include="Utils\UserConverter.cs" />
+    <Compile Include="Utils\XmlReadToObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
